# loitor

./: CMakeLists.txt  README.md  package.xml
cfg/: Loitor.cfg
include/: loitorcam.h
launch/: fancy.launch  loitor.launch
msg/: LoitorCam.msg  LoitorIMU.msg
src/: camtest.cpp  loitorcam.cpp  loitornode.cpp
